clusters/local/tektoncd/tekton-dashboard-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tekton-dashboard
spec:
  hosts:
    - "valkyrie.fritz.box"
  http:
    - name: "tekton-dasboard"
      match:
        - uri:
            prefix: "/tekton"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: tekton-dashboard.tekton-pipelines.svc.cluster.local
